fix: remove unnecessary rotation from LayoutSidebarRightIcon in header component

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body style="scrollbar-width: thin">
     <div id="app"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
